# blizzardv2.1

./: Makefile  README.md  db_credentials.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cli/: blizzard_cli.py
cli/commands/: check_command.py  process_command.py  setup_command.py
cli/completions/: __init__.py
config/templates/: settings_template.json
docs/: CONFIGURATION.md  DATABASE_SCHEMA.md  DEVELOPMENT_SUMMARY.md  PRODUCTION_SETUP.md  TROUBLESHOOTING.md
scripts/: __init__.py  batch_etl.py  check_database.py  check_xml_files.py  copy_xml_files.py  reset_database.py  run_etl.py  setup_database.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  constants.py  exceptions.py
src/db/: __init__.py  connection.py  connection_pool.py  models.py  schema.py
src/db/schema/: irs990_dynamic_schema.sql
src/etl/: __init__.py  batch.py  extractor.py  loader.py  pipeline.py  transformer.py
src/logging/: __init__.py
src/repeating_groups/: __init__.py  detector.py  nested_detector.py  processor.py  utils.py
src/xml/: __init__.py  parser.py  streaming.py  validator.py
test/: __init__.py  conftest.py
test/integration/: test_etl_pipeline.py
test/unit/: test_loader.py
xml_files/: README.md
